--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -374,7 +374,7 @@
         </t>
     </template>
 
-    <template id="portal_create_ceppp_maladie_proche_aidant" name="Create Ceppp Maladie_Proche_Aidant">
+    <template id="portal_create_ceppp_maladie_personne_affectee" name="Create Ceppp Maladie_Personne_Affectee">
         <t t-call="portal.portal_layout">
             <div class="container">
                 <div class="row">
@@ -384,7 +384,7 @@
                 </div>
             </div>
             <form
-                action="/submitted/ceppp_maladie_proche_aidant"
+                action="/submitted/ceppp_maladie_personne_affectee"
                 method="POST"
                 class="form-horizontal mt32"
                 enctype="multipart/form-data"
@@ -428,9 +428,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-3 col-sm-4 control-label" for="autre_maladie">Autres maladies</label>
+                    <label class="col-md-3 col-sm-4 control-label" for="detail_maladie">Détails maladies</label>
                     <div class="col-md-7 col-sm-8">
-        <!-- prettier-ignore-start --><textarea class="form-control o_website_form_input" name="autre_maladie" style="min-height: 120px"><t t-esc="default_autre_maladie"/></textarea><!-- prettier-ignore-end -->
+        <!-- prettier-ignore-start --><textarea class="form-control o_website_form_input" name="detail_maladie" style="min-height: 120px"><t t-esc="default_detail_maladie"/></textarea><!-- prettier-ignore-end -->
         </div>
                 </div>
                 <div class="form-group" style="display:none">
@@ -662,13 +662,16 @@
         </t>
     </template>
 
-    <template id="ceppp_patient_partenaire.portal_my_ceppp_maladie_proche_aidant" name="My Ceppp Maladie_Proche_Aidant">
+    <template
+        id="ceppp_patient_partenaire.portal_my_ceppp_maladie_personne_affectee"
+        name="My Ceppp Maladie_Personne_Affectee"
+    >
         <t t-call="portal.portal_layout">
             <t t-set="o_portal_fullwidth_alert" groups="base.group_partner_manager">
                 <t t-call="portal.portal_back_in_edit_mode">
                     <t
                         t-set="backend_url"
-                        t-value="'/web#return_label=Website&amp;model=ceppp.maladie_proche_aidant&amp;id=%s&amp;view_type=form' % (ceppp_maladie_proche_aidant.id)"
+                        t-value="'/web#return_label=Website&amp;model=ceppp.maladie_personne_affectee&amp;id=%s&amp;view_type=form' % (ceppp_maladie_personne_affectee.id)"
                     />
                 </t>
             </t>
@@ -676,14 +679,14 @@
                 <t t-set="card_header">
                     <h5 class="mb-0">
                         <small class="text-muted">Maladie proche aidant -</small>
-                        <span t-field="ceppp_maladie_proche_aidant.name" />
+                        <span t-field="ceppp_maladie_personne_affectee.name" />
                     </h5>
                 </t>
                 <t t-set="card_body">
                     <div class="row">
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>Maladies:</b>
-                            <t t-foreach="ceppp_maladie_proche_aidant.maladie" t-as="mal">
+                            <t t-foreach="ceppp_maladie_personne_affectee.maladie" t-as="mal">
                                 <a t-attf-href="/my/ceppp_maladie/#{mal.id}" t-field="mal.nom" />
                                 <t t-if="not mal_last">,</t>
                             </t>
@@ -691,28 +694,28 @@
                         <!--                        <div class="col-12 col-md-6 mb-2 mb-md-0" style="display:none">-->
                         <!--                            <b>Recruteur:</b>-->
                         <!--                            <a-->
-                        <!--                                t-attf-href="/my/ceppp_recruteur/#{ceppp_maladie_proche_aidant.recruteur_id.id}"-->
-                        <!--                                t-field="ceppp_maladie_proche_aidant.recruteur_id.name"-->
+                        <!--                                t-attf-href="/my/ceppp_recruteur/#{ceppp_maladie_personne_affectee.recruteur_id.id}"-->
+                        <!--                                t-field="ceppp_maladie_personne_affectee.recruteur_id.name"-->
                         <!--                            />-->
                         <!--                        </div>-->
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>Relation avec la personne aid&#233;e:</b>
-                            <t t-foreach="ceppp_maladie_proche_aidant.relation" t-as="rel">
+                            <t t-foreach="ceppp_maladie_personne_affectee.relation" t-as="rel">
                                 <a t-attf-href="/my/ceppp_relation_proche/#{rel.id}" t-field="rel.name" />
                                 <t t-if="not rel_last">,</t>
                             </t>
                         </div>
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
                             <b>Autre relation:</b>
-                            <span t-field="ceppp_maladie_proche_aidant.relation_autre" />
+                            <span t-field="ceppp_maladie_personne_affectee.relation_autre" />
                         </div>
                         <div class="col-12 col-md-6 mb-2 mb-md-0">
-                            <b>Autre maladie:</b>
-                            <span t-field="ceppp_maladie_proche_aidant.autre_maladie" />
+                            <b>Détails des maladies:</b>
+                            <span t-field="ceppp_maladie_personne_affectee.detail_maladie" />
                         </div>
                         <!--                        <div class="col-12 col-md-6 mb-2 mb-md-0">-->
                         <!--                            <b>Relation Is Autre:</b>-->
-                        <!--                            <span t-field="ceppp_maladie_proche_aidant.relation_is_autre" />-->
+                        <!--                            <span t-field="ceppp_maladie_personne_affectee.relation_is_autre" />-->
                         <!--                        </div>-->
                     </div>
                 </t>
@@ -806,17 +809,17 @@
     </template>
 
     <template
-        id="ceppp_patient_partenaire.portal_my_ceppp_maladie_proche_aidants"
-        name="My Ceppp Maladie_Proche_Aidants"
+        id="ceppp_patient_partenaire.portal_my_ceppp_maladie_personne_affectees"
+        name="My Ceppp Maladie_Personne_Affectees"
     >
         <t t-call="portal.portal_layout">
             <t t-set="breadcrumbs_searchbar" t-value="True" />
             <t t-call="portal.portal_searchbar">
                 <t t-set="title">Maladie proche aidant</t>
             </t>
-            <form method="POST" t-attf-action="/new/ceppp_maladie_proche_aidant">
+            <form method="POST" t-attf-action="/new/ceppp_maladie_personne_affectee">
                 <button
-                    name="create_new_ceppp_maladie_proche_aidant"
+                    name="create_new_ceppp_maladie_personne_affectee"
                     type="action"
                     class="btn btn-primary"
                     style="float: right; margin-right: 5px;"
@@ -825,19 +828,19 @@
                 </button>
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
             </form>
-            <t t-if="not ceppp_maladie_proche_aidants">
+            <t t-if="not ceppp_maladie_personne_affectees">
                 <div class="alert alert-warning mt8" role="alert">Aucune maladie pour proche aidant.</div>
             </t>
-            <t t-if="ceppp_maladie_proche_aidants" t-call="portal.portal_table">
+            <t t-if="ceppp_maladie_personne_affectees" t-call="portal.portal_table">
                 <tbody>
-                    <tr t-foreach="ceppp_maladie_proche_aidants" t-as="ceppp_maladie_proche_aidant">
+                    <tr t-foreach="ceppp_maladie_personne_affectees" t-as="ceppp_maladie_personne_affectee">
                         <td>
                             <a
-                                t-attf-href="/my/ceppp_maladie_proche_aidant/#{ceppp_maladie_proche_aidant.id}?{{ keep_query() }}"
+                                t-attf-href="/my/ceppp_maladie_personne_affectee/#{ceppp_maladie_personne_affectee.id}?{{ keep_query() }}"
                             >
                                 <span
-                                    t-field="ceppp_maladie_proche_aidant.name"
-                                    t-if="ceppp_maladie_proche_aidant.name"
+                                    t-field="ceppp_maladie_personne_affectee.name"
+                                    t-if="ceppp_maladie_personne_affectee.name"
                                 />
                                 <span t-else="">VIDE</span>
                             </a>
@@ -933,16 +936,16 @@
                 <!--                <i class="fa fa-plus-circle" />-->
                 <!--                Ceppp Maladie-->
                 <!--            </a>-->
-                <t t-if="ceppp_maladie_proche_aidant_count" t-call="portal.portal_docs_entry">
+                <t t-if="ceppp_maladie_personne_affectee_count" t-call="portal.portal_docs_entry">
                     <t t-set="title">Maladie des proches aidants</t>
-                    <t t-set="url" t-value="'/my/ceppp_maladie_proche_aidants'" />
-                    <t t-set="count" t-value="ceppp_maladie_proche_aidant_count" />
+                    <t t-set="url" t-value="'/my/ceppp_maladie_personne_affectees'" />
+                    <t t-set="count" t-value="ceppp_maladie_personne_affectee_count" />
                 </t>
                 <a
-                    t-if="not ceppp_maladie_proche_aidant_count"
+                    t-if="not ceppp_maladie_personne_affectee_count"
                     role="button"
                     class="btn btn-primary btn-block mb8"
-                    href="/new/ceppp_maladie_proche_aidant"
+                    href="/new/ceppp_maladie_personne_affectee"
                 >
                     <i class="fa fa-plus-circle" />
                     Maladie des proches aidants
@@ -1003,19 +1006,19 @@
                 <t t-esc="ceppp_maladie.nom" />
             </li>
             <li
-                t-if="page_name in ('ceppp_maladie_proche_aidant', 'create_ceppp_maladie_proche_aidant') or ceppp_maladie_proche_aidant"
-                t-attf-class="breadcrumb-item #{'active ' if not ceppp_maladie_proche_aidant else ''}"
+                t-if="page_name in ('ceppp_maladie_personne_affectee', 'create_ceppp_maladie_personne_affectee') or ceppp_maladie_personne_affectee"
+                t-attf-class="breadcrumb-item #{'active ' if not ceppp_maladie_personne_affectee else ''}"
             >
                 <a
-                    t-if="ceppp_maladie_proche_aidant or page_name == 'create_ceppp_maladie_proche_aidant'"
-                    t-attf-href="/my/ceppp_maladie_proche_aidants?{{ keep_query() }}"
+                    t-if="ceppp_maladie_personne_affectee or page_name == 'create_ceppp_maladie_personne_affectee'"
+                    t-attf-href="/my/ceppp_maladie_personne_affectees?{{ keep_query() }}"
                 >
                     Maladie proche aidant
                 </a>
                 <t t-else="">Maladie proche aidant</t>
             </li>
-            <li t-if="ceppp_maladie_proche_aidant" class="breadcrumb-item active">
-                <t t-esc="ceppp_maladie_proche_aidant.name" />
+            <li t-if="ceppp_maladie_personne_affectee" class="breadcrumb-item active">
+                <t t-esc="ceppp_maladie_personne_affectee.name" />
             </li>
         </xpath>
     </template>
