--- a/ceppp_patient_partenaire/views/ceppp_maladie_personne_affectee.xml
+++ b/ceppp_patient_partenaire/views/ceppp_maladie_personne_affectee.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="ceppp_maladie_proche_aidant_view_form" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_form</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_form" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_form</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
             <form string="Titre">
                 <sheet>
@@ -12,7 +12,7 @@
                             widget="many2many_tags"
                             options="{'no_create': True, 'no_create_edit': True}"
                         />
-                        <field name="autre_maladie" />
+                        <field name="detail_maladie" />
                         <field
                             name="relation"
                             widget="many2many_tags"
@@ -26,25 +26,25 @@
         </field>
     </record>
 
-    <record id="ceppp_maladie_proche_aidant_view_graph" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_graph</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_graph" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_graph</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
-            <graph string="Ceppp maladie proche aidant">
+            <graph string="Ceppp Maladie des personnes affectées">
                 <field name="name" type="row" />
                 <field name="relation_autre" type="row" />
             </graph>
         </field>
     </record>
 
-    <record id="ceppp_maladie_proche_aidant_view_kanban" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_kanban</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_kanban" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_kanban</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
                 <field name="name" />
                 <field name="maladie" />
-                <field name="autre_maladie" />
+                <field name="detail_maladie" />
                 <field name="relation" />
                 <field name="relation_autre" />
                 <templates>
@@ -66,25 +66,25 @@
         </field>
     </record>
 
-    <record id="ceppp_maladie_proche_aidant_view_pivot" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_pivot</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_pivot" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_pivot</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
-            <pivot string="Ceppp maladie proche aidant">
+            <pivot string="Ceppp Maladie des personnes affectées">
                 <field name="name" type="row" />
                 <field name="relation_autre" type="row" />
             </pivot>
         </field>
     </record>
 
-    <record id="ceppp_maladie_proche_aidant_view_search" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_search</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_search" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_search</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
-            <search string="Ceppp maladie proche aidant">
+            <search string="Ceppp Maladie des personnes affectées">
                 <filter domain="[('name','!=',False)]" name="name" string="Name" />
                 <filter domain="[('maladie','!=',False)]" name="maladie" string="Maladies" />
-                <filter domain="[('autre_maladie','!=',False)]" name="autre_maladie" string="Autre maladie" />
+                <filter domain="[('detail_maladie','!=',False)]" name="detail_maladie" string="Détails des maladies" />
                 <filter
                     domain="[('relation','!=',False)]"
                     name="relation"
@@ -95,13 +95,13 @@
         </field>
     </record>
 
-    <record id="ceppp_maladie_proche_aidant_view_tree" model="ir.ui.view">
-        <field name="name">ceppp_maladie_proche_aidant_tree</field>
-        <field name="model">ceppp.maladie_proche_aidant</field>
+    <record id="ceppp_maladie_personne_affectee_view_tree" model="ir.ui.view">
+        <field name="name">ceppp_maladie_personne_affectee_tree</field>
+        <field name="model">ceppp.maladie_personne_affectee</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="maladie" widget="many2many_tags" />
-                <field name="autre_maladie" />
+                <field name="detail_maladie" />
                 <field name="relation" widget="many2many_tags" />
                 <field name="relation_is_autre" invisible="1" />
                 <field name="relation_autre" attrs="{'invisible':[('relation_is_autre','=',False)]}" />
@@ -110,9 +110,9 @@
     </record>
 
     <act_window
-        id="ceppp_maladie_proche_aidant_maladie_proche_aidant_action_window"
-        name="Maladie proche aidant"
-        res_model="ceppp.maladie_proche_aidant"
+        id="ceppp_maladie_personne_affectee_maladie_personne_affectee_action_window"
+        name="Maladie des personnes affectées"
+        res_model="ceppp.maladie_personne_affectee"
         view_mode="kanban,tree,pivot,graph,form"
     />
 </odoo>
