--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -158,13 +158,7 @@
                         </page>
                         <page name='savoir_experientiel' string="Savoirs expérientiels">
                             <group>
-                                <field
-                                    name="maladie_soi_meme"
-                                    widget="many2many_tags"
-                                    options="{'no_create': True, 'no_create_edit': True}"
-                                />
-                                <field name="maladie_soi_meme_autre" />
-                                <field name="maladie_proche_aidant" />
+                                <field name="maladie_personne_affectee" />
                             </group>
                         </page>
                         <page name='formation' string="Formations">
@@ -262,12 +256,12 @@
                 <field name="date_naissance" />
                 <field name="age" />
                 <filter
-                    domain="[('maladie_proche_aidant','!=',False)]"
+                    domain="[('maladie_personne_affectee','!=',False)]"
                     name="avec_proche_aidant"
                     string="Avec proche aidant"
                 />
                 <filter
-                    domain="[('maladie_proche_aidant','=',False)]"
+                    domain="[('maladie_personne_affectee','=',False)]"
                     name="sans_proche_aidant"
                     string="Sans proche aidant"
                 />
